@@ -1,9 +1,14 @@
 package com.linkedin.metadata.resources.entity;
 
-import static com.linkedin.metadata.Constants.*;
+import static com.datahub.authorization.AuthUtil.isAPIAuthorized;
+import static com.datahub.authorization.AuthUtil.isAPIAuthorizedEntityUrns;
+import static com.datahub.authorization.AuthUtil.isAPIAuthorizedUrns;
+import static com.linkedin.metadata.authorization.ApiGroup.COUNTS;
+import static com.linkedin.metadata.authorization.ApiGroup.ENTITY;
+import static com.linkedin.metadata.authorization.ApiGroup.TIMESERIES;
+import static com.linkedin.metadata.authorization.ApiOperation.READ;
 import static com.linkedin.metadata.resources.operations.OperationsResource.*;
 import static com.linkedin.metadata.resources.restli.RestliConstants.*;
-import static com.linkedin.metadata.resources.restli.RestliUtils.*;
 
 import com.codahale.metrics.MetricRegistry;
 import com.datahub.authentication.Authentication;
@@ -11,21 +16,17 @@ import com.datahub.authentication.AuthenticationContext;
 import com.datahub.authorization.EntitySpec;
 import com.datahub.plugins.auth.authorization.Authorizer;
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableList;
 import com.linkedin.aspect.GetTimeseriesAspectValuesResponse;
 import com.linkedin.common.AuditStamp;
 import com.linkedin.common.urn.Urn;
 import com.linkedin.metadata.aspect.EnvelopedAspectArray;
 import com.linkedin.metadata.aspect.VersionedAspect;
+import com.linkedin.metadata.authorization.Disjunctive;
 import com.linkedin.metadata.authorization.PoliciesConfig;
-import com.linkedin.metadata.entity.AspectUtils;
-import com.linkedin.metadata.entity.EntityAspect;
 import com.linkedin.metadata.entity.EntityService;
 import com.linkedin.metadata.entity.IngestResult;
 import com.linkedin.metadata.entity.ebean.batch.AspectsBatchImpl;
 import com.linkedin.metadata.aspect.batch.AspectsBatch;
-import com.linkedin.metadata.entity.ebean.batch.MCLBatchItemImpl;
-import com.linkedin.metadata.entity.ebean.batch.MCPUpsertBatchItem;
 import com.linkedin.metadata.entity.validation.ValidationException;
 import com.linkedin.metadata.query.filter.Filter;
 import com.linkedin.metadata.query.filter.SortCriterion;
@@ -33,7 +34,6 @@ import com.linkedin.metadata.resources.operations.Utils;
 import com.linkedin.metadata.restli.RestliUtil;
 import com.linkedin.metadata.search.EntitySearchService;
 import com.linkedin.metadata.timeseries.TimeseriesAspectService;
-import com.linkedin.metadata.utils.EntityKeyUtils;
 import com.linkedin.mxe.MetadataChangeProposal;
 import com.linkedin.mxe.SystemMetadata;
 import com.linkedin.parseq.Task;
@@ -47,13 +47,15 @@ import com.linkedin.restli.server.annotations.QueryParam;
 import com.linkedin.restli.server.annotations.RestLiCollection;
 import com.linkedin.restli.server.annotations.RestMethod;
 import com.linkedin.restli.server.resources.CollectionResourceTaskTemplate;
+import com.linkedin.util.Pair;
+import io.datahubproject.metadata.context.OperationContext;
+import io.datahubproject.metadata.context.RequestContext;
 import io.opentelemetry.extension.annotations.WithSpan;
 import java.net.URISyntaxException;
 import java.time.Clock;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import javax.inject.Inject;
@@ -83,20 +85,24 @@ public class AspectResource extends CollectionResourceTaskTemplate<String, Versi
 
   @Inject
   @Named("entityService")
-  private EntityService<MCPUpsertBatchItem> _entityService;
+  private EntityService<?> _entityService;
 
   @VisibleForTesting
-  void setEntityService(EntityService<MCPUpsertBatchItem> entityService) {
+  void setEntityService(EntityService<?> entityService) {
     _entityService = entityService;
   }
 
   @Inject
   @Named("entitySearchService")
-  private EntitySearchService _entitySearchService;
+  private EntitySearchService entitySearchService;
 
   @Inject
   @Named("timeseriesAspectService")
-  private TimeseriesAspectService _timeseriesAspectService;
+  private TimeseriesAspectService timeseriesAspectService;
+
+    @Inject
+    @Named("systemOperationContext")
+    private OperationContext systemOperationContext;
 
   @Inject
   @Named("authorizerChain")
@@ -105,6 +111,11 @@ public class AspectResource extends CollectionResourceTaskTemplate<String, Versi
   @VisibleForTesting
   void setAuthorizer(Authorizer authorizer) {
     _authorizer = authorizer;
+  }
+
+  @VisibleForTesting
+  void setSystemOperationContext(OperationContext systemOperationContext) {
+      this.systemOperationContext = systemOperationContext;
   }
 
   /**
@@ -123,18 +134,21 @@ public class AspectResource extends CollectionResourceTaskTemplate<String, Versi
     final Urn urn = Urn.createFromString(urnStr);
     return RestliUtil.toTask(
         () -> {
-          Authentication authentication = AuthenticationContext.getAuthentication();
-          if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-              && !isAuthorized(
-                  authentication,
+
+            Authentication auth = AuthenticationContext.getAuthentication();
+          if (!isAPIAuthorizedEntityUrns(
+                  auth,
                   _authorizer,
-                  ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE),
-                  new EntitySpec(urn.getEntityType(), urn.toString()))) {
+                  READ,
+                  List.of(urn))) {
             throw new RestLiServiceException(
-                HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get aspect for " + urn);
+                HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get aspect for " + urn);
           }
+            final OperationContext opContext = OperationContext.asSession(
+                    systemOperationContext, RequestContext.builder().buildRestli("authorizerChain", urn.getEntityType()), _authorizer, auth, true);
+
           final VersionedAspect aspect =
-              _entityService.getVersionedAspect(urn, aspectName, version);
+              _entityService.getVersionedAspect(opContext, urn, aspectName, version);
           if (aspect == null) {
             throw RestliUtil.resourceNotFoundException(
                 String.format(
@@ -170,18 +184,21 @@ public class AspectResource extends CollectionResourceTaskTemplate<String, Versi
     final Urn urn = Urn.createFromString(urnStr);
     return RestliUtil.toTask(
         () -> {
-          Authentication authentication = AuthenticationContext.getAuthentication();
-          if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-              && !isAuthorized(
-                  authentication,
+
+            Authentication auth = AuthenticationContext.getAuthentication();
+          if (!isAPIAuthorizedUrns(
+                  auth,
                   _authorizer,
-                  ImmutableList.of(PoliciesConfig.GET_TIMESERIES_ASPECT_PRIVILEGE),
-                  new EntitySpec(urn.getEntityType(), urn.toString()))) {
+                  TIMESERIES, READ,
+                  List.of(urn))) {
             throw new RestLiServiceException(
-                HttpStatus.S_401_UNAUTHORIZED,
+                HttpStatus.S_403_FORBIDDEN,
                 "User is unauthorized to get timeseries aspect for " + urn);
           }
-          GetTimeseriesAspectValuesResponse response = new GetTimeseriesAspectValuesResponse();
+            final OperationContext opContext = OperationContext.asSession(
+                    systemOperationContext, RequestContext.builder().buildRestli(ACTION_GET_TIMESERIES_ASPECT, urn.getEntityType()), _authorizer, auth, true);
+
+            GetTimeseriesAspectValuesResponse response = new GetTimeseriesAspectValuesResponse();
           response.setEntityName(entityName);
           response.setAspectName(aspectName);
           if (startTimeMillis != null) {
@@ -197,7 +214,7 @@ public class AspectResource extends CollectionResourceTaskTemplate<String, Versi
           }
           response.setValues(
               new EnvelopedAspectArray(
-                  _timeseriesAspectService.getAspectValues(
+                  timeseriesAspectService.getAspectValues(opContext,
                       urn,
                       entityName,
                       aspectName,
@@ -228,19 +245,23 @@ public class AspectResource extends CollectionResourceTaskTemplate<String, Versi
     }
 
     Authentication authentication = AuthenticationContext.getAuthentication();
-    com.linkedin.metadata.models.EntitySpec entitySpec =
-        _entityService.getEntityRegistry().getEntitySpec(metadataChangeProposal.getEntityType());
-    Urn urn =
-        EntityKeyUtils.getUrnFromProposal(metadataChangeProposal, entitySpec.getKeyAspectSpec());
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            authentication,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.EDIT_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urn.toString()))) {
-      throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to modify entity " + urn);
-    }
+      final OperationContext opContext = OperationContext.asSession(
+              systemOperationContext, RequestContext.builder().buildRestli(ACTION_INGEST_PROPOSAL, metadataChangeProposal.getEntityType()), _authorizer, authentication, true);
+
+    /*
+      Ingest Authorization Checks
+     */
+     List<Pair<MetadataChangeProposal, Integer>> exceptions = isAPIAuthorized(authentication, _authorizer, ENTITY,
+             opContext.getEntityRegistry(), List.of(metadataChangeProposal))
+             .stream().filter(p -> p.getSecond() != HttpStatus.S_200_OK.getCode())
+             .collect(Collectors.toList());
+     if (!exceptions.isEmpty()) {
+         throw new RestLiServiceException(
+                 HttpStatus.S_403_FORBIDDEN, "User is unauthorized to modify entity: " + exceptions.stream()
+                 .map(ex -> String.format("HttpStatus: %s Urn: %s", ex.getSecond(), ex.getFirst().getEntityUrn()))
+                 .collect(Collectors.toList()));
+     }
+
     String actorUrnStr = authentication.getActor().toUrnStr();
     final AuditStamp auditStamp =
         new AuditStamp().setTime(_clock.millis()).setActor(Urn.createFromString(actorUrnStr));
@@ -249,19 +270,19 @@ public class AspectResource extends CollectionResourceTaskTemplate<String, Versi
       log.debug("Proposal: {}", metadataChangeProposal);
       try {
         final AspectsBatch batch = AspectsBatchImpl.builder()
-                .mcps(List.of(metadataChangeProposal), auditStamp, _entityService)
+                .mcps(List.of(metadataChangeProposal), auditStamp, opContext.getRetrieverContext().get())
                 .build();
 
         Set<IngestResult> results =
-                _entityService.ingestProposal(batch, asyncBool);
+                _entityService.ingestProposal(opContext, batch, asyncBool);
 
-            IngestResult one = results.stream().findFirst().get();
+            java.util.Optional<IngestResult> one = results.stream().findFirst();
 
             // Update runIds, only works for existing documents, so ES document must exist
-            Urn resultUrn = one.getUrn();
-            if (one.isProcessedMCL() || one.isUpdate()) {
-              tryIndexRunId(
-                  resultUrn, metadataChangeProposal.getSystemMetadata(), _entitySearchService);
+            Urn resultUrn = one.map(IngestResult::getUrn).orElse(metadataChangeProposal.getEntityUrn());
+            if (one.map(result -> result.isProcessedMCL() || result.isUpdate()).orElse(false)) {
+              tryIndexRunId(opContext,
+                  resultUrn, metadataChangeProposal.getSystemMetadata(), entitySearchService);
             }
             return resultUrn.toString();
           } catch (ValidationException e) {
@@ -279,17 +300,19 @@ public class AspectResource extends CollectionResourceTaskTemplate<String, Versi
       @ActionParam(PARAM_URN_LIKE) @Optional @Nullable String urnLike) {
     return RestliUtil.toTask(
         () -> {
-          Authentication authentication = AuthenticationContext.getAuthentication();
-          if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-              && !isAuthorized(
+
+            Authentication authentication = AuthenticationContext.getAuthentication();
+          if (!isAPIAuthorized(
                   authentication,
                   _authorizer,
-                  ImmutableList.of(PoliciesConfig.GET_COUNTS_PRIVILEGE),
-                  (EntitySpec) null)) {
+                  COUNTS, READ)) {
             throw new RestLiServiceException(
-                HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get aspect counts.");
+                HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get aspect counts.");
           }
-          return _entityService.getCountAspect(aspectName, urnLike);
+            final OperationContext opContext = OperationContext.asSession(
+                    systemOperationContext, RequestContext.builder().buildRestli(ACTION_GET_COUNT, List.of()), _authorizer, authentication, true);
+
+            return _entityService.getCountAspect(opContext, aspectName, urnLike);
         },
         MetricRegistry.name(this.getClass(), "getCount"));
   }
@@ -302,21 +325,33 @@ public class AspectResource extends CollectionResourceTaskTemplate<String, Versi
       @ActionParam(PARAM_URN) @Optional @Nullable String urn,
       @ActionParam(PARAM_URN_LIKE) @Optional @Nullable String urnLike,
       @ActionParam("start") @Optional @Nullable Integer start,
-      @ActionParam("batchSize") @Optional @Nullable Integer batchSize) {
+      @ActionParam("batchSize") @Optional @Nullable Integer batchSize,
+      @ActionParam("limit") @Optional @Nullable Integer limit,
+      @ActionParam("gePitEpochMs") @Optional @Nullable Long gePitEpochMs,
+      @ActionParam("lePitEpochMs") @Optional @Nullable Long lePitEpochMs) {
     return RestliUtil.toTask(
         () -> {
-          return Utils.restoreIndices(
-              aspectName, urn, urnLike, start, batchSize, _authorizer, _entityService);
+            if (!isAPIAuthorized(
+                    AuthenticationContext.getAuthentication(),
+                    _authorizer,
+                    PoliciesConfig.RESTORE_INDICES_PRIVILEGE)) {
+                throw new RestLiServiceException(
+                        HttpStatus.S_403_FORBIDDEN, "User is unauthorized to update entities.");
+            }
+
+            return Utils.restoreIndices(systemOperationContext,
+              aspectName, urn, urnLike, start, batchSize, limit, gePitEpochMs, lePitEpochMs, _authorizer, _entityService);
         },
         MetricRegistry.name(this.getClass(), "restoreIndices"));
   }
 
   private static void tryIndexRunId(
+          @Nonnull final OperationContext opContext,
       final Urn urn,
       final @Nullable SystemMetadata systemMetadata,
       final EntitySearchService entitySearchService) {
     if (systemMetadata != null && systemMetadata.hasRunId()) {
-      entitySearchService.appendRunId(urn.getEntityType(), urn, systemMetadata.getRunId());
+      entitySearchService.appendRunId(opContext, urn.getEntityType(), urn, systemMetadata.getRunId());
     }
   }
 }
